tree父级多个节点

--- a/genogram.html
+++ b/genogram.html
@@ -820,7 +820,7 @@ var json = [[{
     "pid": "",
     "cid": ["652801195510153142"],
     "bid": ["652801197602173131", "653221198702021256", "652801197804013136"],
-    "imgurl": "http://127.0.0.1:8081/ITAP/servlet/back/TPckS?type=cxXP&ZJHM=653221198702021256",
+    "imgurl": "http://p1.so.qhmsg.com/t01135dca31d7299dd1.jpg",
     "relation": "弟子",
     "record": ""
 }], [{
@@ -1027,7 +1027,7 @@ var json = [[{
     "pid": "",
     "cid": [],
     "bid": ["340322198907016828"],
-    "imgurl": "http://127.0.0.1:8081/ITAP/servlet/back/TPckS?type=cxXP&ZJHM=340322198907016828",
+    "imgurl": "http://pic104.nipic.com/file/20160720/3717505_104228824245_2.jpg",
     "relation": "弟子",
     "record": ""
 },
@@ -1042,15 +1042,170 @@ var json = [[{
     "pid": "",
     "cid": [],
     "bid": ["652926197401203210"],
-    "imgurl": "http://127.0.0.1:8081/ITAP/servlet/back/TPckS?type=cxXP&ZJHM=652926197401203210",
+    "imgurl": "http://p1.so.qhmsg.com/t01135dca31d7299dd1.jpg",
     "relation": "弟子",
     "record": ""
 }]];
 
+var json  = [[{
+        "url": [],
+        "usemenu": false,
+        "id": "653126198203022234",
+        "name": "艾合麦提·库尔班",
+        "fid": "fbd2706469144087b5650a6983d2bdab",
+        "mid": "",
+        "pid": "652923197609025127",
+        "cid": ["652826198203102311", "652928197612033314", "654123198311230024", "622225198711210314", "652823197904071227"],
+        "bid": [],
+        "imgurl": "http://127.0.0.1:8081/ITAP/servlet/back/TPckS?type=cxXP&ZJHM=653126198203022234",
+        "relation": "父亲",
+        "relations": [],
+        "record": ""
+    },
+    {
+        "id": "652923197609025127",
+        "name": "再吐南木·依明",
+        "record": "",
+        "relation": "配偶",
+        "bid": [],
+        "imgurl": "http://127.0.0.1:8081/ITAP/servlet/back/TPckS?type=cxXP&ZJHM=652923197609025127",
+        "fid": "",
+        "mid": "",
+        "pid": "653126198203022234",
+        "cid": ["652826198203102311", "652928197612033314", "654123198311230024", "622225198711210314", "652823197904071227"]
+    }], [{
+        "url": [],
+        "usemenu": false,
+        "id": "622225198711210314",
+        "name": "孙海",
+        "fid": "653126198203022234",
+        "mid": "652923197609025127",
+        "pid": "",
+        "cid": [],
+        "bid": ["652826198203102311", "652928197612033314", "654123198311230024", "622225198711210314", "652823197904071227"],
+        "imgurl": "http://127.0.0.1:8081/ITAP/servlet/back/TPckS?type=cxXP&ZJHM=622225198711210314",
+        "relation": "弟弟",
+        "relations": [],
+        "record": "橙色_特殊群体"
+    },
+    {
+        "url": [],
+        "usemenu": false,
+        "id": "652823197904071227",
+        "name": "克来木汗·依明",
+        "fid": "653126198203022234",
+        "mid": "652923197609025127",
+        "pid": "",
+        "cid": [],
+        "bid": ["652826198203102311", "652928197612033314", "654123198311230024", "622225198711210314", "652823197904071227"],
+        "imgurl": "http://127.0.0.1:8081/ITAP/servlet/back/TPckS?type=cxXP&ZJHM=652823197904071227",
+        "relation": "妹妹",
+        "relations": [],
+        "record": ""
+    },
+    {
+        "url": [],
+        "usemenu": false,
+        "id": "652826198203102311",
+        "name": "达吾提·库完",
+        "fid": "653126198203022234",
+        "mid": "652923197609025127",
+        "pid": "652901198105310027",
+        "cid": ["650121198502090814", "652928196705041976"],
+        "bid": ["652826198203102311", "652928197612033314", "654123198311230024", "622225198711210314", "652823197904071227"],
+        "imgurl": "http://127.0.0.1:8081/ITAP/servlet/back/TPckS?type=cxXP&ZJHM=652826198203102311",
+        "relation": "户主",
+        "relations": [],
+        "record": ""
+    },
+    {
+        "id": "652901198105310027",
+        "name": "帕提古力阿布都热依木",
+        "record": "",
+        "relation": "配偶",
+        "bid": "652901198105310027",
+        "imgurl": "http://127.0.0.1:8081/ITAP/servlet/back/TPckS?type=cxXP&ZJHM=652901198105310027",
+        "fid": "",
+        "mid": "",
+        "pid": "652826198203102311",
+        "cid": ["650121198502090814", "652928196705041976"]
+    },
+    {
+        "url": [],
+        "usemenu": false,
+        "id": "652928197612033314",
+        "name": "阿布都热西提·阿布拉",
+        "fid": "653126198203022234",
+        "mid": "652923197609025127",
+        "pid": "",
+        "cid": [],
+        "bid": ["652826198203102311", "652928197612033314", "654123198311230024", "622225198711210314", "652823197904071227"],
+        "imgurl": "http://127.0.0.1:8081/ITAP/servlet/back/TPckS?type=cxXP&ZJHM=652928197612033314",
+        "relation": "哥哥",
+        "relations": [],
+        "record": ""
+    },
+    {
+        "url": [],
+        "usemenu": false,
+        "id": "654123198311230024",
+        "name": "拉比彦·太来提",
+        "fid": "653126198203022234",
+        "mid": "652923197609025127",
+        "pid": "",
+        "cid": [],
+        "bid": ["652826198203102311", "652928197612033314", "654123198311230024", "622225198711210314", "652823197904071227"],
+        "imgurl": "http://127.0.0.1:8081/ITAP/servlet/back/TPckS?type=cxXP&ZJHM=654123198311230024",
+        "relation": "姐姐",
+        "relations": [],
+        "record": ""
+    }], [{
+        "url": [],
+        "usemenu": false,
+        "id": "650121198502090814",
+        "name": "陈军",
+        "fid": "652826198203102311",
+        "mid": "652901198105310027",
+        "pid": "653201197408051032",
+        "cid": [],
+        "bid": ["650121198502090814", "652928196705041976"],
+        "imgurl": "http://127.0.0.1:8081/ITAP/servlet/back/TPckS?type=cxXP&ZJHM=650121198502090814",
+        "relation": "儿子",
+        "relations": [],
+        "record": ""
+    },
+    {
+        "id": "653201197408051032",
+        "name": "买塞地·斯地克",
+        "record": "红色_被判刑人员",
+        "relation": "配偶",
+        "bid": "653201197408051032",
+        "imgurl": "http://127.0.0.1:8081/ITAP/servlet/back/TPckS?type=cxXP&ZJHM=653201197408051032",
+        "fid": "",
+        "mid": "",
+        "pid": "650121198502090814",
+        "cid": []
+    },
+    {
+        "url": [],
+        "usemenu": false,
+        "id": "652928196705041976",
+        "name": "吾甫尔·阿里木",
+        "fid": "652826198203102311",
+        "mid": "652901198105310027",
+        "pid": "",
+        "cid": [],
+        "bid": ["650121198502090814", "652928196705041976"],
+        "imgurl": "http://127.0.0.1:8081/ITAP/servlet/back/TPckS?type=cxXP&ZJHM=652928196705041976",
+        "relation": "儿子",
+        "relations": [],
+        "record": "红色_被击毙人员"
+    }]]
+
 var opt = {
   data : json,
   id : "genogram",
-  type : "genogram", //genogram, tree
+  type : "tree", //genogram, tree
   coordX : 210,   //节点x轴间距
   coordY : 310,   //节点y轴间距
   selfH : 235,    //节点高度
